added mobile breakpoints

--- a/views/parts/body.hbs
+++ b/views/parts/body.hbs
@@ -33,7 +33,7 @@
 
     <div class="row justify-content-center">
 
-      <div class="col-3">
+      <div class="col-md-3">
         <a href="/fantasy">
           <div class="card mb-3">
             <img class="card-img-top" src="voskuhl/gallery-1.png">
@@ -46,7 +46,7 @@
         </a>
       </div>
 
-      <div class="col-3">
+      <div class="col-md-3">
         <a href="/occult">
           <div class="card mb-3">
             <img class="card-img-top" src="voskuhl/gallery-2.png">
@@ -59,7 +59,7 @@
         </a>
       </div>
 
-      <div class="col-3">
+      <div class="col-md-3">
         <a href="/cool-steel">
           <div class="card mb-3">
             <img class="card-img-top" src="voskuhl/gallery-3.png">
